--- a/index.html
+++ b/index.html
@@ -11,10 +11,8 @@
     Current File:
     <select class="select-file" id="current-file"></select>
   </div> -->
+  <button type="button" id="save-data">Save</button>
   <div class="data_image"></div>
-  <!-- <div class="data_table" id="data_table">
-    <button type="button" id="save_data">Save</button>
-  </div> -->
   <div class="page-pattern-1">
     <h2 class="title">腹部超音波検査 受診票</h2>
     <div class="header">
