install tesseract node module

--- a/index.html
+++ b/index.html
@@ -343,8 +343,11 @@
 <!-- https://cdnjs.com/libraries/tesseract.js -->
 <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/tesseract.js/4.0.6/tesseract.min.js"></script> -->
 
-<script src="https://cdnjs.cloudflare.com/ajax/libs/tesseract.js/5.0.2/tesseract.min.js"></script>
+<!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/tesseract.js/5.0.2/tesseract.min.js"></script> -->
+
+<script src="./node_modules/tesseract.js/dist/tesseract.min.js"></script>
 <script src="./main.js"></script>
+
 <!-- (C) INIT -->
 <script>
 // window.addEventListener("load", async () => {
