--- a/index.html
+++ b/index.html
@@ -12,7 +12,10 @@
     <select class="select-file" id="current-file"></select>
   </div> -->
   <button type="button" id="save-data">Save</button>
-  <div class="data_image"></div>
+  <div class="iamge_preview">
+    <img id="previewImage" src="" alt="Preview Image">
+  </div>
+  <a id="hiddenLink" style="display: none;"></a>
   <div class="page-pattern-1">
     <h2 class="title">腹部超音波検査 受診票</h2>
     <div class="header">
