integrating pen-to-print api

--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
     <select class="select-file" id="current-file"></select>
   </div> -->
   <button type="button" id="save-data">Save</button>
-  <div class="iamge_preview">
+  <!-- <div class="iamge_preview">
     <img id="previewImage" src="" alt="Preview Image">
-  </div>
+  </div> -->
   <a id="hiddenLink" style="display: none;"></a>
   <div class="page-pattern-1">
     <h2 class="title">腹部超音波検査 受診票</h2>
